--- a/assets/dev/widget.scss
+++ b/assets/dev/widget.scss
@@ -1,3 +1,4 @@
+// TODO 更加合理的样式框架
 /*
 * 搜索框
 */
@@ -408,7 +409,6 @@ nav.breadcrumb {
         li {
             margin: 0;
             border-bottom: 1px solid var(--jelly-color-border);
-
             &.active {
                 background: var(--jelly-color-primary);
                 a {
