--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -4,32 +4,43 @@
     padding: 0 var(--jelly-side-width, 16px);
     box-sizing: border-box;
     position: relative;
-    &.primary {
+    &.flex {
         display: flex;
         margin: 32px auto;
         gap: 48px;
         clear: both;
+    }
+    &.full {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+    }
+    &.reverse {
+        flex-direction: row-reverse;
     }
     .content {
         flex-grow: 1; /* 自动扩展以填充可用空间 */
         // width: 100%;
         min-width: 0;
         box-sizing: border-box;
-        .entry-title,.page-title{
-            margin-top: 0;
-            margin-bottom: 24px;
-        }
+        // .entry-title,
+        // .page-title {
+        //     margin-top: 0;
+        //     margin-bottom: 24px;
+        // }
     }
     .sidebar {
         width: 240px;
         flex: 0 0 auto; /* 不扩展，宽度由内容或设定的宽度决定 */
-        h2,h3,h4{
+        h2,
+        h3,
+        h4 {
             font-size: 20px !important;
             text-transform: capitalize;
             // padding: 8px 12px;
             box-sizing: border-box;
-            &::after{
-                content: '';
+            &::after {
+                content: "";
                 display: block;
                 height: 3px;
                 width: 30%;
@@ -56,17 +67,15 @@
     .loop-gird {
         grid-template-columns: repeat(2, 1fr);
     }
-
 }
 
 @media screen and (max-width: 768px) {
-    .container.primary {
+    .container.flex {
         gap: 16px;
         flex-direction: column !important;
         .content {
             width: 100%;
         }
-        
         .sidebar {
             width: 100%;
             margin-top: 32px;
@@ -107,6 +116,7 @@
         img {
             height: 60px;
             width: 100%;
+            object-fit: contain;
         }
     }
     .jelly-container {
@@ -292,6 +302,7 @@
     font-size: 16px;
     color: var(--jelly-color-description);
 }
+/* 404 页面 */
 .error-page {
     width: 400px;
     margin: 32px auto;
@@ -307,18 +318,12 @@
     }
 }
 
-.archive-page {
-    .container.primary {
-        flex-direction: row-reverse;
-    }
-    .archive-description {
-        margin-bottom: 16px;
-    }
-}
-
+/* 文章页面 */
 .post-page .post {
+    h1{
+        margin-top: 24px;
+    }
     p {
-        // color: var(--jelly-color-text);
         a {
             text-decoration: underline;
         }
@@ -333,6 +338,7 @@
     }
 }
 
+/* 移动端 */
 @media screen and (max-width: 767px) {
     .error-page {
         width: 100%;
@@ -342,6 +348,7 @@
     }
 }
 
+/* 更小的移动端 */
 @media (max-width: 480px) {
     .error-page {
         .error-title {
@@ -349,6 +356,7 @@
         }
     }
 }
+// TODO 更加合理的样式框架
 /*
 * 搜索框
 */
@@ -759,7 +767,6 @@ nav.breadcrumb {
         li {
             margin: 0;
             border-bottom: 1px solid var(--jelly-color-border);
-
             &.active {
                 background: var(--jelly-color-primary);
                 a {
@@ -899,31 +906,12 @@ nav.breadcrumb {
     nav.breadcrumb p {
         width: 100%;
     }
-    .jelly-menu {
-        width: 100%;
-        background-color: #fff;
+    .primary-menu {
+        .menu-list{
+            display: none;
+        }
         .menu-toggle {
             display: block;
-        }
-        .menu-list {
-            width: 100%;
-            height: 100%;
-            display: block;
-            margin-left: 20%;
-            // flex-direction: column;
-            background-color: #fff;
-            box-shadow: var(--jelly-box-shadow);
-            a {
-                width: 100%;
-            }
-        }
-        .menu-container {
-            position: fixed;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            background: rgba(0, 0, 0, 0.5);
         }
     }
 }
