--- a/assets/dev/layout.scss
+++ b/assets/dev/layout.scss
@@ -60,6 +60,17 @@
     grid-template-rows: repeat(1, 1fr);
 }
 
+.content-table {
+    overflow-x: auto;
+    display: block;
+    width: 100%;
+    table {
+        width: 100%;
+        display: block;
+        white-space: nowrap;
+    }
+}
+
 @media screen and (max-width: 1240px) {
     .container {
         width: 100%;
@@ -69,7 +80,7 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .container.flex {
         gap: 16px;
         flex-direction: column !important;
