--- a/assets/fonts/remixicon/remixicon.css
+++ b/assets/fonts/remixicon/remixicon.css
@@ -8,12 +8,12 @@
 
 @font-face {
     font-family: "remixicon";
-    src: url('remixicon.eot?t=1746514992905'); /* IE9*/
-    src: url('remixicon.eot?t=1746514992905#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url("remixicon.woff2?t=1746514992905") format("woff2"),
-    url("remixicon.woff?t=1746514992905") format("woff"),
-    url('remixicon.ttf?t=1746514992905') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-    url('remixicon.svg?t=1746514992905#remixicon') format('svg'); /* iOS 4.1- */
+    src: url('remixicon.eot?t=1746762414760'); /* IE9*/
+    src: url('remixicon.eot?t=1746762414760#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url("remixicon.woff2?t=1746762414760") format("woff2"),
+    url("remixicon.woff?t=1746762414760") format("woff"),
+    url('remixicon.ttf?t=1746762414760') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+    url('remixicon.svg?t=1746762414760#remixicon') format('svg'); /* iOS 4.1- */
     font-display: swap;
 }
 
@@ -53,7 +53,6 @@
 .ri-timer-line:before { content: "\f215"; }
 .ri-twitter-line:before { content: "\f23b"; }
 .ri-twitter-x-line:before { content: "\f3e7"; }
-.ri-facebook-line:before { content: "\ecbd"; }
 .ri-linkedin-fill:before { content: "\eeb5"; }
 .ri-search-line:before { content: "\f0d1"; }
 .ri-menu-line:before { content: "\ef3e"; }
@@ -62,3 +61,4 @@
 .ri-whatsapp-line:before { content: "\f2bc"; }
 .ri-corner-down-right-line:before { content: "\f309"; }
 .ri-tiktok-line:before { content: "\f373"; }
+.ri-facebook-circle-fill:before { content: "\ecba"; }
