--- a/assets/dev/wordpress.css
+++ b/assets/dev/wordpress.css
@@ -61,14 +61,14 @@
 .navigation.pagination .page-numbers.prev,
 .navigation.pagination a.page-numbers.prev {
   position: absolute;
-  margin: 0;
   left: 0;
+  border: 0;
 }
 .navigation.pagination .page-numbers.next,
 .navigation.pagination a.page-numbers.next {
   position: absolute;
-  margin: 0;
   right: 0;
+  border: 0;
 }
 .navigation.pagination .page-numbers.current {
   background: var(--jelly-color-primary);
