--- a/assets/dev/wordpress.scss
+++ b/assets/dev/wordpress.scss
@@ -60,13 +60,15 @@
         }
         &.prev {
             position: absolute;
-            margin: 0;
+            // margin: 0;
             left: 0;
+            border: 0;
         }
         &.next {
             position: absolute;
-            margin: 0;
+            // margin: 0;
             right: 0;
+            border: 0;
         }
     }
     .page-numbers.current {
