--- a/assets/dev/widget.scss
+++ b/assets/dev/widget.scss
@@ -299,7 +299,6 @@
     }
 }
 
-
 /*
 * 分享按钮
 */
@@ -508,6 +507,52 @@ nav.breadcrumb {
 }
 
 /*
+* 页面Banner
+*/
+.page-banner {
+    padding: 32px var(--jelly-side-width, 16px);
+    box-sizing: border-box;
+    background-color: #313131;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    text-align: center;
+    h1 {
+        margin: 0;
+        color: #fff;
+    }
+    &::before {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.2);
+    }
+    nav.breadcrumb {
+        border: 0;
+        p {
+            width: auto;
+            margin: 0;
+            padding: 0;
+            color: #fff;
+        }
+        a {
+            color: #fff;
+        }
+        .last {
+            color: #fff;
+        }
+    }
+}
+
+/*
 * 全局表单
 */
 .inquiry-form {
@@ -519,9 +564,17 @@ nav.breadcrumb {
 }
 
 @media screen and (min-width: 767px) {
-    .inquiry-form{
+    .inquiry-form {
         position: sticky;
         top: 140px;
+    }
+}
+@media screen and (min-width: 1240px) {
+    .page-banner {
+        min-height: 300px;
+        h1 {
+            font-size: 72px;
+        }
     }
 }
 @media screen and (max-width: 1240px) {
@@ -536,6 +589,11 @@ nav.breadcrumb {
             display: block;
         }
     }
+    
+    .page-banner{
+        min-height: 200px;
+    }
+
 }
 
 @media screen and (max-width: 767px) {
@@ -545,6 +603,10 @@ nav.breadcrumb {
         &.active-progress {
             transform: scale(1.1) translateY(0);
         }
+    }
+
+    .page-banner{
+        min-height: 150px;
     }
 
     .jelly-related-posts {
